# ansible-nxos

./: .ansible-lint  .gitignore  .gitmessage  .markdownlint.json  .markdownlint.yml  CHANGELOG.md  LICENSE  NOTICE  README.md  ansible.cfg  inventory.yml  pyproject.toml  requirements_ansible.yml  requirements_python-dev.txt  requirements_python.txt
.devcontainer/: changelog.sh  container.code-workspace  devcontainer.json  install-dev-tools.sh
group_vars/: nxos.yml
playbooks/: backup_config.yml  configure_vlans.yml  configure_vrf.yml  gather_facts.yml  show_vlans.yml  show_vrfs.yml
vars/: nxos-config.yml
